Kong Global Gateway With ExternalName/apps/grc/grc-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: grc-team
  name: grc-team
