Kong Global Gateway With ExternalName/apps/grc/audit.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: audit-svc
  namespace: grc-team
spec:
  selector:
    app: audit-svc
  ports:
    - port: 6062
      targetPort: 9092
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-svc
  namespace: grc-team
  labels:
    app: audit-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-svc
  template:
    metadata:
      labels:
        app: audit-svc
      annotations:
        # consul.hashicorp.com/connect-inject: 'true'
        # consul.hashicorp.com/connect-service-upstreams: 'sanction-svc:9093'
        # consul.hashicorp.com/enable-metrics-merging: "false"
    spec:
      serviceAccountName: audit-svc
      containers:
        - name: audit-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9092
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
