Kong Global Gateway With ExternalName/apps/grc/sanction.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sanction-svc
  namespace: grc-team
spec:
  selector:
    app: sanction-svc
  ports:
    - port: 6063
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sanction-svc
  namespace: grc-team
  labels:
    app: sanction-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sanction-svc
  template:
    metadata:
      labels:
        app: sanction-svc
      annotations:
        # consul.hashicorp.com/connect-inject: 'true'
        # consul.hashicorp.com/enable-metrics-merging: "false"
    spec:
      serviceAccountName: sanction-svc
      containers:
        - name: sanction-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9093
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
