Kong Global Gateway With ExternalName/apps/grc/02-fraud-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fraud-httproute
  namespace: grc-team
spec:
  parentRefs:
  - name: grc-kong-api-gateway
    namespace: grc-kic
  hostnames:
  - "grc.mini-apps.click"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: fraud-svc.grc-team.svc.cluster.local
    backendRefs:
    - kind: Service
      name: fraud-svc
      port: 6061
